fix: hacky way to avoid layout shift

--- a/styles/site.css
+++ b/styles/site.css
@@ -10,6 +10,10 @@
     }
 }
 
+.c {
+    visibility: hidden;
+}
+
 .ProseMirror .is-editor-empty:first-child::before {
     content: attr(data-placeholder);
     float: left;
